--- a/Code Examples 2020/week2/webapi-v6/index.html
+++ b/Code Examples 2020/week2/webapi-v6/index.html
@@ -11,7 +11,9 @@
   <p>Features:</p>
   <ul>
     <li>Node.js and Express.js</li>
-    <li>No database, no data - just string responses from the Express.js methods</li>
+    <li>No database, and the data (a collection of automobiles) is in memory</li>
+    <li>Methods that support get all, get one, add new, edit existing, and delete item</li>
+    <li>This app uses a data model manager (<code>manager.js</code>) to handle data service tasks</li>
    </ul>
   <p>Open the README.md document for how-to info.</p>
 </body>
