Add cursor pointer to rows, fix JS naming, add serve for static server

--- a/Code Examples/week2/Data-Rendering/webApp/index.html
+++ b/Code Examples/week2/Data-Rendering/webApp/index.html
@@ -7,7 +7,11 @@
     <title>Rendering Data</title>
     <!-- Bootstrap 3.4.1 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
+    <style>
+        tr {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <br>
@@ -16,8 +20,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Rendering Data using Lodash</h2>
+                <h1>Rendering Data using Lodash and jQuery</h1>
                 <hr>
+                <h2>Theaters</h2>
                 <table class="table table-hover" id="theaters-table">
                     <thead>
                         <tr>
