--- a/Code Examples/week2/Moment/index.html
+++ b/Code Examples/week2/Moment/index.html
@@ -16,6 +16,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h3>Hello Moment!</h3>
+                <p>See the <code><a href="js/main.js">js/main.js</a></code> file.</p>
             </div>
         </div>
     </div> 
